# Assets

./: .env.example  .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yml  index.html  mkdocs.yml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  nightly-health.yml  pr-quality-gate.yml  release-build.yml
api-reference/: index.html
auth-security/: index.html
backend/: .dockerignore  Dockerfile  README.md  index.html  manage.py  pyproject.toml  requirements.txt
backend/apps/auth/: admin.py  api.py  apps.py  constants.py  dependencies.py  models.py  schemas.py  seed.py  tests.py  tokens.py  utils.py
backend/apps/auth/migrations/: 0001_initial.py  0002_alter_authauditlog_action.py
backend/apps/notifications/: api.py  apps.py
backend/apps/payments/: api.py  apps.py
backend/apps/reports/: api.py  apps.py
backend/apps/tickets/: api.py  apps.py
backend/apps/wallet/: api.py  apps.py
backend/assets_backend/: api.py  asgi.py  settings.py  urls.py  wsgi.py
css/: extra.css
dashboards-reporting/: index.html
database-schema/: index.html
deploy/nginx/: Dockerfile
deploy/nginx/conf.d/: default.conf.template
devops-deployment/: index.html
docs/: api-reference.md  architecture.md  auth-security.md  backend.md  dashboards-reporting.md  database-schema.md  devops-deployment.md  frontend.md  index.md  notifications-messaging.md  payment-integration.md  roadmap.md  system-design.md  testing.md  user-roles-permissions.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/auth/: AuthGate.tsx
frontend/src/components/dashboard/: PerformanceChart.tsx  SummaryCards.tsx
frontend/src/components/forms/: AuthForm.tsx
frontend/src/components/shared/: AppFooter.tsx  AppNavbar.tsx  (+1 more)
frontend/src/hooks/: useAuth.ts  useBackendHealth.ts  useRequireAuth.ts
frontend/src/lib/: api.ts  auth.ts  config.ts  routes.ts
frontend/src/styles/: theme.ts
frontend/src/types/: auth.ts
infrastructure/ansible/: README.md  requirements.yml
infrastructure/ansible/inventory/: hosts.yml
infrastructure/ansible/playbooks/: site.yml
infrastructure/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
notifications-messaging/: index.html
payment-integration/: index.html
roadmap/: index.html
scripts/: db_backup.sh  sentry_digest.py
search/: search_index.json
system-design/: index.html
testing/: index.html
user-roles-permissions/: index.html
(+13 files in other folders)
